// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`search/results.tsx snapshots > renders the genuine empty state with a notify-me action 1`] = `
[
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "paddingBottom": 12,
            "paddingHorizontal": 20,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#E4EDFB",
            "paddingTop": 8,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="common:actions.back"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "width": 22,
          }
        }
      >
        <Ionicons
          color="#14201B"
          name="chevron-back"
          size={22}
        />
      </TouchableOpacity>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        La Marsa, Tunis → Avenue Habib Bourguiba, Tunis
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 22,
          }
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 40,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="calendar-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "lineHeight": 16,
              },
            ]
          }
        >
          21 août, 23:00
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="search:results.mapView"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="map-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "lineHeight": 16,
              },
            ]
          }
        >
          search:results.mapView
        </Text>
      </TouchableOpacity>
    </View>
    <ScrollView
      contentContainerStyle={
        {
          "gap": 16,
          "paddingHorizontal": 20,
          "paddingVertical": 16,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View
        style={
          {
            "paddingTop": 32,
          }
        }
      >
        <View
          accessibilityRole="text"
          accessible={true}
          style={
            {
              "alignItems": "center",
              "gap": 8,
              "padding": 20,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 24,
                  "fontWeight": "600",
                  "lineHeight": 28.799999999999997,
                },
                {
                  "color": "#26333A",
                  "textAlign": "center",
                  "writingDirection": "ltr",
                },
                {
                  "marginTop": 4,
                },
              ]
            }
          >
            search:results.noResults
          </Text>
          <Pressable
            accessibilityLabel="search:results.notifyMe"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "disabled": false,
              }
            }
            disabled={false}
            onPress={[Function]}
            style={[Function]}
          >
            <Text
              style={
                [
                  {
                    "fontWeight": "600",
                  },
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "#2E3B42",
                  },
                ]
              }
            >
              search:results.notifyMe
            </Text>
          </Pressable>
        </View>
      </View>
    </ScrollView>
  </View>,
  <View
    pointerEvents="box-none"
    style={
      {
        "gap": 8,
        "left": 16,
        "position": "absolute",
        "right": 16,
        "top": 32,
      }
    }
  />,
]
`;

exports[`search/results.tsx snapshots > renders the loading skeleton 1`] = `
[
  <View
    style={
      [
        {
          "flex": 1,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "paddingBottom": 12,
            "paddingHorizontal": 20,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#E4EDFB",
            "paddingTop": 8,
          },
        ]
      }
    >
      <TouchableOpacity
        accessibilityLabel="common:actions.back"
        accessibilityRole="button"
        hitSlop={12}
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "width": 22,
          }
        }
      >
        <Ionicons
          color="#14201B"
          name="chevron-back"
          size={22}
        />
      </TouchableOpacity>
      <Text
        numberOfLines={1}
        style={
          [
            {
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 28.799999999999997,
            },
            {
              "color": "#14201B",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        La Marsa, Tunis → Avenue Habib Bourguiba, Tunis
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "width": 22,
          }
        }
      />
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingHorizontal": 40,
            "paddingVertical": 12,
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderBottomColor": "#E4EDFB",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
          }
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#8B93A3"
          importantForAccessibility="no-hide-descendants"
          name="calendar-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 21,
              },
              {
                "color": "#8B93A3",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "lineHeight": 16,
              },
            ]
          }
        >
          21 août, 23:00
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="search:results.mapView"
        accessibilityRole="button"
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "backgroundColor": "#E4EDFB",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#14201B"
          importantForAccessibility="no-hide-descendants"
          name="map-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "400",
                "lineHeight": 18,
              },
              {
                "color": "#14201B",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "lineHeight": 16,
              },
            ]
          }
        >
          search:results.mapView
        </Text>
      </TouchableOpacity>
    </View>
    <ScrollView
      contentContainerStyle={
        {
          "gap": 16,
          "paddingHorizontal": 20,
          "paddingVertical": 16,
        }
      }
      showsVerticalScrollIndicator={false}
    >
      <View
        style={
          {
            "gap": 12,
          }
        }
      >
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 140,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {
                "borderRadius": 16,
              },
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 140,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {
                "borderRadius": 16,
              },
            ]
          }
        />
        <Animated.View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "backgroundColor": "#EAE7DC",
              },
              {
                "borderRadius": 4,
                "height": 140,
                "opacity": AnimatedValue {
                  "value": 0.45,
                },
                "width": "100%",
              },
              {
                "borderRadius": 16,
              },
            ]
          }
        />
      </View>
    </ScrollView>
  </View>,
  <View
    pointerEvents="box-none"
    style={
      {
        "gap": 8,
        "left": 16,
        "position": "absolute",
        "right": 16,
        "top": 32,
      }
    }
  />,
]
`;
